# cosmic_python

./: .gitignore  generate_timestamps.py  pyproject.toml  pytest.ini  readme.md  test.py
sqlalchemy_tutorial/: test_orm.py
src/: batch.py  config.py  fastapi_app.py  flask_app.py  model.py  orm.py  repository.py  services.py
src/adapters/: orm.py  repository.py
src/entrypoints/: fastapi_app.py
src/service_layer/: services.py  unit_of_work.py
test/: allocate_test.py  batch_test.py  conftest.py  test_allocate.py  test_api.py  test_batch.py  test_batches.py  test_name.py  test_orm.py  test_repository.py  test_services.py
test/e2e/: test_api.py
test/integration/: test_repository.py  test_uow.py
test/unit/: test_services.py
