[build-system]
requires = [
    "setuptools == 75.8.0",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic_python"
authors = [
    {name = "Bogdan Mesesan", email = "mesesan.boby@yahoo.com"}
]
maintainers = [
    {name = "Bogdan Mesesan", email = "mesesan.boby@yahoo.com"}
]
description = "Cosmit Python repo"
readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
]
requires-python = "==3.12.3"
dependencies = [
    "pytest==8.3.4"
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools]
packages = [
    "src"
]


